@@ -1,3 +1,9 @@
+2006-04-07  Randolph Chung  <tausq@debian.org>
+
+	* elf64-hppa.c (elf64_hppa_grok_prstatus): New function.
+	(elf64_hppa_grok_psinfo): Likewise.
+	(elf_backend_grok_pstatus, elf_backend_grok_psinfo): Define.
+
 2006-04-06  DJ Delorie  <dj@redhat.com>
 
 	* elf32-m32c.c (m32c_elf_relocate_section): Generate a symbol for
